--- a/vms/roles/vms/tasks/delete.yml
+++ b/vms/roles/vms/tasks/delete.yml
@@ -3,7 +3,7 @@
 - name: remove virtual machines
   community.libvirt.virt:
     name: "{{ vmname }}-{{ item }}"
-    command: destroy
+    state: destroyed
     force: true
   when: count is defined
   loop: "{{ range(0, count)|list }}"
@@ -11,6 +11,6 @@
 - name: remove virtual machine
   community.libvirt.virt:
     name: "{{ vmname }}"
-    command: destroy
+    state: destroyed
     force: true
   when: count is undefined
