--- a/vms/roles/vms/tasks/delete.yml
+++ b/vms/roles/vms/tasks/delete.yml
@@ -3,8 +3,7 @@
 - name: remove virtual machines
   community.libvirt.virt:
     name: "{{ vmname }}-{{ item }}"
-    state: shutdown
-    command: destroy
+    command: undefine
     force: true
   when: count is defined
   loop: "{{ range(0, count)|list }}"
@@ -12,7 +11,6 @@
 - name: remove virtual machine
   community.libvirt.virt:
     name: "{{ vmname }}"
-    state: shutdown
-    command: destroy
+    command: undefine
     force: true
   when: count is undefined
