--- a/manifests/bootstrap/credentials.yaml
+++ b/manifests/bootstrap/credentials.yaml
@@ -3,11 +3,11 @@ kind: Secret
 type: Opaque
 metadata:
   name: common
-  namespace: ${ns}
+  namespace: "{{ ns }}"
   labels:
     cluster.open-cluster-management.io/type: hostinventory
     cluster.open-cluster-management.io/credentials: ""
 stringData:
-  baseDomain: "${domain}"
-  pullSecret: "$pullsecret}"
-  ssh-publickey: "${pubkey}"
+  baseDomain: "{{ domain }}"
+  pullSecret: "{{ pullsecret }}"
+  ssh-publickey: "{{ pubkey }}"
