--- a/vms/roles/vms/tasks/status.yml
+++ b/vms/roles/vms/tasks/status.yml
@@ -7,4 +7,4 @@
 
 - name: print vm
   ansible.builtin.debug:
-    msg: "{{ running_vms.get_xml | xml_to_json }}"
+    msg: "{{ running_vms.get_xml | ansible.utils.from_xml(''xmltodict'') }}"
