updated and added

--- a/clusters/prod/01-bmc.yaml
+++ b/clusters/prod/01-bmc.yaml
@@ -3,5 +3,7 @@ kind: Secret
 metadata:
   name: bmc-secret
   namespace: prod
-data: {}
+data:
+  username: $(BMCUSER)
+  password: $(BMCPWD)
 type: Opaque
